--- a/.example.run.script.with.env
+++ b/.example.run.script.with.env
@@ -33,7 +33,9 @@ fi
 touch .env
 
 # Append string to .env file
-echo 'TEST=test' >> .env
+echo 'NAME=Josh' >> .env
+
+echo 'DESCRIPTION=Next with system env description' >> .env
 
 #  Build new docker image
 docker build -t nextjs-with-system-env .
